--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div id="root">  </div>
 
 
-    //synchronous appending of child 
+    <!-- synchronous appending of child  -->
     <script>
         const sheading = document.createElement("h1");
         sheading.innerHTML = "Hello World from JS!";
